--- a/index.html
+++ b/index.html
@@ -2,11 +2,147 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Welcome to the gorgeous Sedona</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-logo" href="index.html">
+          <img src="http://placehold.it/138x70" width="138" height="70" alt="City of Sedona">
+        </a>
+        <ul class="site-navigation">
+          <li><a href="info.html">Информация</a></li>
+          <li><a href="media.html">Фото и видео</a></li>
+          <li><a href="map.html">Карта штата</a></li>
+          <li><a href="hotels.html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="container">
+      <section class="main-picture">
+        <h1 class="visually-hidden">Седона</h1>
+      </section>
+      <section class="main-description">
+				<h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+			</section>
+      <section class="advantages">
+        <h2 class="visually-hidden"> Преимущество Седоны №1 </h2>
+          <div class="first-advantage-text">
+            <h3>Настоящий городок</h3>
+              <p class="advantage-number">-№1-</p>
+              <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+          </div>
+          <figure class="first-advantage-photo">
+            <img src="http://placehold.it/800x256" width="800" height="256" alt="Красивый город">
+          </figure>
+      </section>
+      <section class="tips-list">
+        <h2 class="visually-hidden"> Список подсказок </h2>
+        <ul>
+          <li class="tips-list-item">
+            <figure class="first-tips-photo">
+              <img src="http://placehold.it/138x70" width="138" height="70" alt="Домик">
+            </figure>
+            <h3>Жилье</h3>
+            <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </li>
+          <li class="tips-list-item">
+            <figure class="second-tips-photo">
+              <img src="http://placehold.it/138x70" width="138" height="70" alt="Еда">
+            </figure>
+            <h3>Еда</h3>
+            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="tips-list-item">
+            <figure class="third-tips-photo">
+              <img src="http://placehold.it/138x70" width="138" height="70" alt="Сувениры">
+            </figure>
+            <h3>Сувениры</h3>
+            <p>Не только китайского, но и местного производства!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="advantages-second-part">
+        <h2 class="visually-hidden"> Преимущество Седоны №2 </h2>
+        <figure class="second-advantage-photo">
+          <img src="http://placehold.it/138x70" width="800" height="256" alt="Мост дьявола">
+        </figure>
+        <div class="second-advantage-text">
+          <h3>Там есть мост дьявола</h3>
+          <p class="advantage-number">-№2-</p>
+          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        </div>
+      </section>
+      <section class="advantage-list">
+        <h2 class="visually-hidden">Другие преимущества Седоны</h2>
+        <ul>
+          <li class="advantage-list-item">
+            <h3>Небольшая площадь</h3>
+            <p class="advantage-number">-№3-</p>
+            <p>Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantage-list-item">
+            <h3>Красивая дорога</h3>
+            <p class="advantage-number">-№4-</p>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantage-list-item">
+            <h3>Мало туристов</h3>
+            <p class="advantage-number">-№5-</p>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ul>
+      </section>
+      <section class="hotel-search">
+				<h2 class="visually-hidden">Поиск гостиницы</h2>
+				<h3>Заинтересовались?</h3>
+				<p>Укажите предполагаемые даты поездки,
+					 и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+				<button type="button" class="btn btn-hotel-search">
+					Поиск гостиницы в Седоне
+				</button>
+			</section>
+      <article class="map">
+				<img src="http://placehold.it/1200x593" width="1200" height="593" alt="Карта города">
+				<section class="hotel-search-form">
+					<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+						<p class="date-checkin"> <label for="date-checkin">Дата заезда:</label>
+							<input class="date-checkin" type="text" name="date-checkin" id="date-checkin" placeholder="24 апреля 2017">
+							<button type="button" class="btn-calendar"> <span class="visually-hidden">Календарь</span> </button>
+						</p>
+						<p class="date-checkout"> <label for="date-checkout">Дата выезда:</label>
+							<input class="date-checkout" type="text" name="date-checkout" id="date-checkout" placeholder="4 июля 2017">
+							<button type="button" class="btn-calendar"> <span class="visually-hidden">Календарь</span> </button>
+						</p>
+						<p class="number-adults"> <label for="number-adults">Взрослые:</label>
+							<button type="button" class="btn-minus">-</button>
+							<input class="number-adults" type="text" name="number-adults" id="number-adults"  placeholder="2">
+							<button type="button" class="btn-plus">+</button>
+						</p>
+						<p class="number-children"> <label for="number-children">Дети:</label>
+							<button type="button" class="btn-minus">-</button>
+							<input class="number-children" type="text" name="number-children" id="number-children" placeholder="2">
+							<button type="button" class="btn-plus">+</button>
+						</p>
+						<button class="btn btn-form-search" type="submit">Найти</button>
+					</form>
+				</section>
+			</article>
+    </main>
+    <footer class="main-footer">
+  			<p class="footer-teg">#visitsedona</p>
+  			<div class="footer-social">
+  				<ul>
+  					<li><a class="social-btn social-btn-twit" href="#"><span class="visually-hidden">Twitter</span></a></li>
+  					<li><a class="social-btn social-btn-fb" href="#"><span class="visually-hidden">Facebook</span></a></li>
+  					<li><a class="social-btn social-btn-yt" href="#"><span class="visually-hidden">Youtube</span></a></li>
+  				</ul>
+  			</div>
+  			<p class="footer-copyright">
+  				<b>Website by:</b>
+          <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+        </p>
+  	</footer>
   </body>
 </html>
