--- a/inner.html
+++ b/inner.html
@@ -8,20 +8,21 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-logo" href="index.html">
-        <img src="img/index-logo.png" width="138" height="70" alt="City of Sedona">
-      </a>
-      <ul class="site-navigation">
-        <li><a href="info.html">Информация</a></li>
-        <li><a href="media.html">Фото и видео</a></li>
-        <li><a href="map.html">Карта штата</a></li>
-        <li><a href="hotels.html">Гостиницы</a></li>
-      </ul>
-    </nav>
-  </header>
-	<main class="container">
+	<div class="container">
+  	<header class="main-header">
+      	<a class="main-logo" href="index.html">
+        	<img src="img/index-logo.png" width="138" height="70" alt="City of Sedona">
+      	</a>
+				<nav class="site-navigation inner-navigation">
+      		<ul>
+						<li class="text-left"><a class="active" href="#">Информация</a></li>
+            <li class="text-left"><a href="#">Фото и видео</a></li>
+            <li class="text-right"><a href="#">Карта штата</a></li>
+            <li class="text-right"><a href="inner.html">Гостиницы</a></li>
+      		</ul>
+    		</nav>
+  	</header>
+	<main>
 			<section class="filters">
 				<div class="inner-container">
 					<form class="filters-form" action="https://echo.htmlacademy.ru" method="post">
@@ -29,16 +30,16 @@
 							<legend>Инфраструктура:</legend>
 							<ul>
 								<li class="filter-option">
-									<input type="checkbox" id="pool" name="infrastructure" checked>
-									<label for="pool">Бассейн</label>
+									<input class="visually-hidden filter-input" type="checkbox" id="pool" name="infrastructure" checked>
+									<label class="filter-label" for="pool">Бассейн</label>
 								</li>
 								<li class="filter-option">
-									<input type="checkbox" id="parking" name="infrastructure">
-									<label for="parking">Парковка</label>
+									<input class="visually-hidden filter-input" type="checkbox" id="parking" name="infrastructure">
+									<label class="filter-label" for="parking">Парковка</label>
 								</li>
 								<li class="filter-option">
-									<input type="checkbox" id="wifi" name="infrastructure">
-									<label for="wifi">Wi-Fi</label>
+									<input class="visually-hidden filter-input" type="checkbox" id="wifi" name="infrastructure">
+									<label class="filter-label" for="wifi">Wi-Fi</label>
 								</li>
 							</ul>
 						</fieldset>
@@ -46,16 +47,16 @@
 							<legend>Тип жилья:</legend>
 							<ul>
 								<li class="filter-option">
-									<input type="checkbox" id="hotel" name="housing-type"  checked>
-									<label for="hotel">Гостиница</label>
+									<input class="visually-hidden filter-input" type="checkbox" id="hotel" name="housing-type"  checked>
+									<label class="filter-label" for="hotel">Гостиница</label>
 								</li>
 								<li class="filter-option">
-									<input type="checkbox" id="motel" name="housing-type" checked>
-									<label for="motel">Мотель</label>
+									<input class="visually-hidden filter-input" type="checkbox" id="motel" name="housing-type" checked>
+									<label class="filter-label" for="motel">Мотель</label>
 								</li>
 								<li class="filter-option">
-									<input type="checkbox" id="apartments" name="housing-type" checked>
-									<label for="apartments">Апартаменты</label>
+									<input class="visually-hidden filter-input" type="checkbox" id="apartments" name="housing-type" checked>
+									<label class="filter-label" for="apartments">Апартаменты</label>
 								</li>
 							</ul>
 						</fieldset>
@@ -71,7 +72,8 @@
 							</ul>
 							<div class="range-controls">
 								<div class="scale">
-										<div class="bar"></div>
+										<div class="bar">
+										</div>
 								</div>
 								<div class="range-toggle range-toggle-min"></div>
 								<div class="range-toggle range-toggle-max"></div>
@@ -82,7 +84,7 @@
 				</div>
 			</section>
 			<section class="found-searching">
-				<div class="inner-container found-sorting">
+				<div class="inner-container">
 					<b>Найдено: 3</b>
 					<p>Сортировка:</p>
 					<ul class="found-searching-list">
@@ -113,7 +115,7 @@
 						<img src="img/hotel-amara.jpg"  width="135" height="90" alt="Amara Resort & Spa">
 						<div class="hotel-description">
 							<h3><a class="hotel-link" href="#">Amara Resort & Spa</a></h3>
-							<b>Гостиница</b>
+							<b class="housing-type">Гостиница</b>
 							<b>от 4000р.</b>
 							<div class="hotel-result-buttons">
 							  <a class="btn btn-details" href="#">Подробнее</a>
@@ -133,7 +135,7 @@
 						<img src="img/hotel-desert.jpg"  width="135" height="90" alt="Desert Quail Inn">
 						<div class="hotel-description">
 							<h3><a class="hotel-link" href="#">Desert Quail Inn</a></h3>
-							<b>Мотель</b>
+							<b class="housing-type">Мотель</b>
 							<b>от 3000р.</b>
 							<div class="hotel-result-buttons">
 							  <a class="btn btn-details" href="#">Подробнее</a>
@@ -153,7 +155,7 @@
 						<img src="img/hotel-villas.jpg"  width="135" height="90" alt="Villas at Poco Diablo">
 						<div class="hotel-description">
 							<h3><a class="hotel-link" href="#">Villas at Poco Diablo</a></h3>
-							<b>Апартаменты</b>
+							<b class="housing-type">Апартаменты</b>
 							<b>от 2000р.</b>
 							<div class="hotel-result-buttons">
 							  <a class="btn btn-details" href="#">Подробнее</a>
@@ -170,7 +172,7 @@
 				</article>
 			</section>
 		</main>
-    <footer class="main-footer">
+    <footer class="main-footer inner-footer">
       <p class="footer-teg">#visitsedona</p>
       <div class="footer-social">
         <ul>
@@ -194,5 +196,6 @@
       </p>
     </footer>
 	</main>
+ </div>
 </body>
 </html>
