--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
            <h2 class="visually-hidden"> Преимущество Седоны №1 </h2>
            <div class="first-advantage-text">
              <h3>Настоящий городок</h3>
-                <p class="advantage-number">-№1-</p>
+                <p class="advantage-number">№1</p>
                 <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
             </div>
             <figure class="first-advantage-photo">
@@ -76,7 +76,7 @@
           </figure>
           <div class="second-advantage-text">
             <h3>Там есть мост дьявола</h3>
-            <p class="advantage-number">-№2-</p>
+            <p class="advantage-number">№2</p>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </div>
         </section>
@@ -85,17 +85,17 @@
           <ul>
             <li class="advantage-list-item">
               <h3>Небольшая площадь</h3>
-              <p class="advantage-number">-№3-</p>
+              <p class="advantage-number">№3</p>
               <p>Все достопримечательности находятся очень близко</p>
             </li>
             <li class="advantage-list-item">
               <h3>Красивая дорога</h3>
-              <p class="advantage-number">-№4-</p>
+              <p class="advantage-number">№4</p>
               <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="advantage-list-item">
               <h3>Мало туристов</h3>
-              <p class="advantage-number">-№5-</p>
+              <p class="advantage-number">№5</p>
               <p>Большинство едет в Гранд Каньон и толпится там</p>
             </li>
           </ul>
