--- a/inner.html
+++ b/inner.html
@@ -25,7 +25,7 @@
 	<main>
 			<section class="filters">
 				<div class="inner-container">
-					<form class="filters-form" action="https://echo.htmlacademy.ru" method="post">
+					<form class="filters-form" action="https://echo.htmlacademy.ru" method="get">
 						<fieldset class="filters-infrastructure">
 							<legend>Инфраструктура:</legend>
 							<ul>
@@ -191,7 +191,6 @@
 				</a>
       </p>
     </footer>
-	</main>
  </div>
 </body>
 </html>
